some more setup scripts